# stem-system

./: .gitignore  .gitmodules  AGENTS.md  README.md
backend/: .gitignore  README.md
backend/app/: .env.example  README.md  alembic.ini  auth.py  config.py  main.py  pyproject.toml  schemas.py  services.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 20260715_01_initial.py  20260716_02_users_and_question_owners.py  20260716_03_user_expiration.py  20260717_04_capacity_queue.py  20260717_05_question_versions.py  20260717_06_work_item_benchmark_timing.py  20260723_07_check_run_requester.py
backend/app/app/: __init__.py  audit_models.py  config.py  db_init.py  main.py  queue.py  schemas.py  services.py
backend/app/scripts/: test_apiroute.py
backend/app/tests/: test_capacity_queue.py  test_check_run_conflicts.py  test_db_init.py  test_question_versions.py  test_queue_monitor.py
backend/scripts/: benchmark_question_pipeline.py
frontend/: .gitignore  README.md
frontend/app/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: LatexRenderer.tsx
reports/: 质检基准-运行d212d3ba-6d57-4827-8801-3cb973c5d609-20260717-163228.md  质检基准-题目2-20260717-163819.md
worker/: .gitignore  README.md
worker/app/: .env.example  README.md  config.py  models.py  pyproject.toml  services.py
worker/app/app/: __init__.py  audit_models.py  config.py  db.py  models.py  queue.py  schemas.py  services.py  worker.py
worker/app/tests/: test_capacity_queue.py  test_latex.py  test_worker_heartbeat.py
(+15 files in other folders)
