[project]
name = "stem-audit-backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "redis>=5.0,<6",
  "httpx>=0.27,<1",
  "pydantic>=2.0,<3",
  "pydantic-settings>=2.4,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
stem-init-db = "app.db_init:main"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
